// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth wrapper inits Google Maps with api key value:  1`] = `
Object {
  "apiKey": "",
  "render": [Function],
  "version": "3.47.2",
}
`;

exports[`Auth wrapper inits Google Maps with api key value:  2`] = `
<div
  id="rendered"
/>
`;

exports[`Auth wrapper inits Google Maps with api key value: apikey: apikey 1`] = `
Object {
  "apiKey": "apikey",
  "render": [Function],
  "version": "3.47.2",
}
`;

exports[`Auth wrapper inits Google Maps with api key value: apikey: apikey 2`] = `
<div
  id="rendered"
/>
`;
